# llglengine

./: .gitignore  CMakeLists.txt  hello.cpp
include/editor/: editor.hpp
include/render/: shader.hpp  shadermanager.hpp
include/utils/: glfwsurface.hpp
src/demo/: Example.cpp
src/editor/: editor.cpp
src/render/: shader.cpp  shadermanager.cpp
src/utils/: glfwsurface.cpp
